--- a/rooster-android-app/bin/AndroidManifest.xml
+++ b/rooster-android-app/bin/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
   package="com.itborci" android:versionCode="1" android:versionName="1.0-SNAPSHOT">
 
-  <application android:icon="@drawable/icon" android:label="@string/app_name" android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen">
+  <application android:icon="@drawable/icon" android:label="@string/app_name">
     <activity android:name=".HelloAndroidActivity">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
