--- a/rooster-android-app/AndroidManifest.xml
+++ b/rooster-android-app/AndroidManifest.xml
@@ -7,7 +7,7 @@
         android:targetSdkVersion="12" />
 
   <application android:icon="@drawable/icon" android:label="@string/app_name">
-    <activity android:name="com.itborci.MainActivity">
+    <activity android:name=".gui.MainActivity">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
         <category android:name="android.intent.category.LAUNCHER" />
