--- a/rooster-android-app/pom.xml
+++ b/rooster-android-app/pom.xml
@@ -23,6 +23,12 @@
             <version>${platform.version}</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.8.1</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
