--- a/rooster-android-app/AndroidManifest.xml
+++ b/rooster-android-app/AndroidManifest.xml
@@ -5,6 +5,8 @@
    <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="12" />
+   <uses-permission android:name="android.permission.WAKE_LOCK"/>
+   <uses-permission android:name="android.permission.VIBRATE"></uses-permission>
 
   <application android:icon="@drawable/icon" android:label="@string/app_name">
     <activity android:name=".gui.MainActivity" android:screenOrientation="portrait">
@@ -14,6 +16,8 @@
         
       </intent-filter>
     </activity>
+    <receiver android:name="com.itborci.gui.AlarmManagerReceiver">
+    </receiver>
   </application>
 
 </manifest>
